versioned_docs/version-5.x/manage-dataset/add-edit-tags.md
---
sidebar_position: 10
title: Add edit tags
image: https://docs.sodaforsparc.io/thumbnails/manage-dataset/add-edit-tags.png
---

## Background

All SPARC datasets must have the following metadata on Pennsieve: subtitle, description, banner image, tags and license. This interface allows you to easily add, edit, and remove dataset tags. Tags are essentially keywords, and will make your dataset more easily searchable once published. Please be sure to be descriptive.

## How to

1. Select/confirm your Pennsieve account and dataset. If you have not connected your Pennsieve account with SODA yet, [use the instructions available here](./connect-your-pennsieve-account-with-soda).
2. Add, edit, or delete tags:
   - Enter any tags you feel capture the nature of your research in the textbox. Once you have text for a single tag, press `Enter` or click off the textbox to add it.
   - Edit existing tags by double clicking them to change their text. Press `Enter` to click off the textbox to finalize the edit.
   - Delete a tag by clicking the `x` to the right of a given tag.
3. Click on the `Add Tags` button.

   - If you already had tags you will be presented with an `Edit Tags` button to click on instead.

   ![](https://github.com/fairdataihub/SODA-for-SPARC/blob/main/docs/documentation/Manage-datasets/Manage-permissions/add-permissions.gif?raw=true)

import PageFeedback from '@site/src/components/PageFeedback';

<PageFeedback />
