versioned_docs/version-8.0.1/manage-dataset/add-edit-tags.md
---
sidebar_position: 10
title: Add edit tags
image: https://og.fairdataihub.org/api/ogimage?app=soda-for-sparc&title=Add%2Fedit%20tags&description=Manage%20Dataset
---

## Background

All SPARC datasets must have the following metadata on Pennsieve: subtitle, description, banner image, license, and tags. This interface allows you to easily add, edit, and remove dataset tags. Tags are essentially keywords, and will make your dataset more easily searchable once published on the [SPARC data portal](https://sparc.science/).

## How to

To access this interface click on the `Free Form Mode` side bar option, then click on the `Manage Datasets` tab, and finally click on the `Add/edit tags` card.

1. Select/confirm your Pennsieve account and dataset. If you have not connected your Pennsieve account with SODA yet, [use the instructions available here](./connect-your-pennsieve-account-with-soda).
2. Add, edit, or delete tags:
   - Enter any tags you feel capture the nature of your research in the textbox. Once you have entered the text for a single tag, press `Enter` or click off the textbox to add it.
   - Edit existing tags by double clicking them to change their text. Press `Enter` or click off the textbox to finalize the edit.
   - Delete a tag by clicking the `x` to the right of a given tag.
3. Click on the `Add Tags` button.

   - If you already had tags you will be presented with an `Edit Tags` button to click on instead.

import PageFeedback from '@site/src/components/PageFeedback';

<PageFeedback />
